# arch-clean

./: Cargo.toml  README.md
src/: cmd.rs  main.rs
