[package]
name = "arch-clean"
version = "0.1.0"
authors = ["Mario Ortiz Manero <marioortizmanero@gmail.com>"]
edition = "2021"

[dependencies]
argh = "0.1.4"
anyhow = "1.0.34"
tokio = { version = "1.12.0", features = ["full"] }
async-trait = "0.1.51"
tokio-stream = { version = "0.1.7", features = ["io-util", "fs"] }
