[package]
name = "arch-clean"
version = "0.1.0"
authors = ["Mario Ortiz Manero <marioortizmanero@gmail.com>"]
edition = "2021"

[dependencies]
argh = "0.1.6"
anyhow = "1.0"
tokio = { version = "1.12", features = ["full"] }
async-trait = "0.1"
tokio-stream = { version = "0.1.7", features = ["io-util", "fs"] }
