[package]
name = "arch-clean"
version = "0.1.0"
authors = ["Mario Ortiz Manero <marioortizmanero@gmail.com>"]
edition = "2021"

[dependencies]
argh = "0.1.7"
anyhow = "1.0.56"
tokio = { version = "1.17.0", features = ["full"] }
async-trait = "0.1.53"
tokio-stream = { version = "0.1.8", features = ["io-util", "fs"] }
